syntax = "proto3";

import "google/protobuf/empty.proto";
package bankAccount;

option go_package = "./bankAccount";

message Error {
  string message = 1;
  string type = 2;
}

message BankAccountsReply {
  repeated BankAccountReply bank_accounts = 1;

  Error error = 2;
}

message BankAccountRequest {
  string id = 1;
}

message BankAccountReply {
  string id = 1;
  string name = 2;
  string balance = 3;

  Error error = 4;
}

message CreateBankAccountRequest {
  string account_id = 1;
  string name = 2;
}

service BankAccountService {
  rpc GetBankAccounts (google.protobuf.Empty) returns (BankAccountsReply) {}
  rpc GetBankAccount (BankAccountRequest) returns (BankAccountReply) {}
  rpc CreateBankAccount (CreateBankAccountRequest) returns (Error) {}
  rpc DeleteBankAccount (BankAccountRequest) returns (Error) {}
}
